--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -116,7 +116,7 @@
     <string name="generate_name_hint">Nombre del monedero</string>
     <string name="generate_password_hint">Frase de Contraseña</string>
     <string name="generate_fingerprint_hint">Permitir abrir usando huella dactilar</string>
-    <string name="generate_fingerprint_warn">[<![CDATA[
+    <string name="generate_fingerprint_warn"><![CDATA[
         <strong>Autenticación por huella</strong>
         <p>Con la autenticación por huella dactilar activada, puedes acceder al balance y recibir fondos
         sin la necesidad de ingresar tu contraseña.</p>
@@ -127,7 +127,7 @@
         va a ser capaz de mirar el balance de tu monedero.</p>
         <p>Por ejemplo, un actor malicioso cercano podría abrir tu monedero con tu dedo mientras duermes.</p>
         <strong>¿Estás seguro de activar esta función?</strong>
-    ]]>]</string>
+    ]]></string>
     <string name="generate_bad_passwordB">Contraseñas no coinciden</string>
     <string name="generate_empty_passwordB">Contraseña no puede estar vacía</string>
     <string name="generate_buttonGenerate">¡Házme ya un monedero!</string>
