shorten de label for receive button

--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -142,7 +142,7 @@
 
     <string name="label_watchonly">(Watch Only)</string>
 
-    <string name="label_wallet_receive">Empfangen</string>
+    <string name="label_wallet_receive">Nehmen</string>
     <string name="label_wallet_send">Geben</string>
 
     <string name="xmr_unconfirmed_amount">+ %1$s XMR unbestätigt</string>
