--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -224,7 +224,7 @@
     <string name="send_paymentid_hint">Zahlungs-ID (optional)</string>
     <string name="send_amount_hint">0.00</string>
     <string name="send_notes_hint">Private Notizen (optional)</string>
-    <string name="send_generate_paymentid_hint">Generieren</string>
+    <string name="send_generate_paymentid_hint">Erzeuge</string>
     <string name="send_qr_hint">Scannen</string>
     <string name="send_send_label">Gib meine wertvollen Moneroj aus</string>
     <string name="send_send_timed_label">Gib meine wertvollen Moneroj aus (%1$s)</string>
